--- a/src/views/bidderDashboard.ejs
+++ b/src/views/bidderDashboard.ejs
@@ -84,10 +84,10 @@
             <hr style="margin-top: -5px; margin-bottom: -1px;">
             <tr style="text-align:center; overflow-wrap: break-word;">
                 <td><b>Id</b></td>
-                <td><b>Tender name</b></td>
-                <td><b>Tender Description</b></td>
+                <td><b>Item name</b></td>
+                <td><b>Item Description</b></td>
                 <td><b>Quantity</b></td>
-                <td><b>Tender Issuer</b></td>
+                <td><b>Bid Issuer</b></td>
                 <td><b>Bid Here</b></td>
             </tr>
         </table>
@@ -103,7 +103,7 @@
             <hr style="margin-top: -5px; margin-bottom: -1px;">
             <tr style="text-align:center">
                 <td><b>Id</b></td>
-                <td><b>Tender name</b></td>
+                <td><b>Bid name</b></td>
                 <td><b>Bid per Item</b></td>
                 <td><b>Bid Status</b></td>
             </tr>
