--- a/src/views/uploaderDashboard.ejs
+++ b/src/views/uploaderDashboard.ejs
@@ -71,8 +71,8 @@
         <hr>
     
         <center style="margin-bottom:10px;">
-            <button class="w3-button w3-green" style="width:150px;" onclick="uploadTenders();">Upload Tender</button>
-            <button class="w3-button w3-blue" style="width:150px;" onclick="showTenders();">My Tenders</button>
+            <button class="w3-button w3-green" style="width:150px;" onclick="uploadTenders();">Upload Bid</button>
+            <button class="w3-button w3-blue" style="width:150px;" onclick="showTenders();">My Bids</button>
             <button class="w3-button w3-red" style="width:150px;" onclick="showBids();">Show all Bids</button><br>
             <font size=1 color="blue" style="cursor: pointer;" onclick="location.href='/logout'">Not you? Logout here.</font>
         </center>
@@ -117,10 +117,10 @@
             <hr style="margin-top: -5px; margin-bottom: -1px;">
             <tr style="text-align:center">
                 <td><b>Id</b></td>
-                <td><b>Tender Name</b></td>
-                <td><b>Tender Description</b></td> 
+                <td><b>Item Name</b></td>
+                <td><b>Item Description</b></td> 
                 <td><b>Quantity</b></td>
-                <td><b>Tender Status</b></td>
+                <td><b>Bid Status</b></td>
             </tr>
         </table>
 
@@ -135,8 +135,8 @@
             <hr style="margin-top: -5px; margin-bottom: -1px;">
             <tr style="text-align:center">
                 <td><b>Bid Id</b></td>
-                <td><b>Tender Id</b></td>
-                <td><b>Tender Name</b></td>
+                <td><b>Item Id</b></td>
+                <td><b>Item Name</b></td>
                 <td><b>Bid Per Item</b></td>
                 <td><b>Bidder Address</b></td>
                 <td><b>Accept Bid</b></td>
